--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,14 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-}
+:root {}
 
-@media (prefers-color-scheme: dark) {
-}
+@media (prefers-color-scheme: dark) {}
 
-body {
-}
+body {}
 
 @layer utilities {
   .text-balance {
